--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=restaurante
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurante
-spring.datasource.username=lucas
-spring.datasource.password=5859
+spring.datasource.username=postgres
+spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
